syntax = "proto3";
package neutron.dex;

option go_package = "github.com/neutron-org/neutron/x/dex/types";
import "gogoproto/gogo.proto";
import "neutron/dex/limit_order_tranche.proto";
import "neutron/dex/pool_reserves.proto";


message TickLiquidity {
  oneof liquidity {
    PoolReserves pool_reserves = 1;
    LimitOrderTranche limit_order_tranche = 2;
  }

}

